# sigma

./: .gitignore  CMakeLists.txt  README.md  dict.cpp  dict.hpp  game.cpp  game.h  game.hpp  game_interface.cpp  game_interface.hpp  main.cpp  painter.cpp  painter.hpp  player.cpp  player.h  player.hpp  trie.cpp  trie.hpp  words.hpp
